# hardcaml_networking

./: .gitignore  EthMac_of_Hardcaml.opam  HardcamlDocs.md  MODULE  MODULE.bazel  README.md  bootstrap.sh  dune-project  eth_mac_tx.v  hardcaml_eth_mac.v  hardcaml_networking.opam  scratch.md
lib/: BUILD
lib/common/: BUILD  arty_board_top.ml  board_top.ml  clk_div.ml  dune  generate.ml  helper_circuits.ml  second_pulse.ml
lib/ipv4/: dune  ipv4_rx.ml  ipv4_tx.ml
lib/mii/: common_types.ml  dune  eth_test_top.ml  mac_top.ml  rx_byte_assembler.ml  rx_controller.ml  rx_controller.mli  rx_controller_intf.ml  rx_crc.ml  rx_datapath.ml  rx_top.ml  second_pulse.ml  tx_byte_disassembler.ml  tx_controller.ml  tx_crc.ml  tx_datapath.ml
lib/uart/: dune  uart_top.ml  uart_tx.ml
lib/udp/: dune  udp.ml  udp_duplex_mac_top.ml  udp_loopback_mac_top.ml  udp_mac_top.ml  udp_rx.ml  udp_rx_mac_top.ml  udp_tx.ml
mii/mii_of_hardcaml/docs/: internal_signal_probing.md
mii/mii_of_hardcaml/src/: mac_top.ml  rx_byte_assembler.ml  rx_controller.ml  rx_controller.mli  rx_controller_explicit.ml  rx_datapath.ml
mii/mii_of_hardcaml/testbenches/: dune  fsm_states.txt  fsm_states_string_of_hex.txt  rx_byte_assembler_tb.ml  rx_controller_tb.ml  rx_datapath_tb.ml  rx_mac_top_tb.ml
rgmii/: dune-project  rx_frame_parser_tb.sv
rgmii/src/: dune  eth_mac.ml  rx_deserializer.ml  rx_sink.ml  tx_source.ml
rgmii/src/rtl/eth_mac/: rx_deser.v  rx_frame_parser.v
rgmii/src/rtl/eth_mac/_build/: .db  .digest-db  log
rgmii/src/rtl/eth_mac/_build/default/.dune/: configurator  configurator.v2
rgmii/src/rtl/eth_mac/_build/default/.ppx/71e877b3fd3c4ee586dcdc8842a15751/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
rgmii/src/rtl/eth_mac/_build/default/lib/: eth_mac.cmxa  eth_mac.ml  eth_mac.pp.ml  rgmii_interface.ml-gen  rgmii_interfaces.pp.ml
rgmii/src/rtl/eth_mac/_build/default/lib/.eth_mac.objs/byte/: eth_mac.cmi  eth_mac.cmo  eth_mac.cmt
rgmii/src/rtl/eth_mac/_build/default/lib/.eth_mac.objs/native/: eth_mac.cmx
rgmii/src/rtl/eth_mac/_build/default/lib/.merlin-conf/: lib-eth_mac  lib-rgmii_interface
rgmii/src/rtl/eth_mac/_build/default/lib/.rgmii_interface.objs/: rgmii_interface__Rgmii_interfaces.impl.d
rgmii/src/rtl/eth_mac/_build/default/lib/.rgmii_interface.objs/byte/: rgmii_interface.cmi  rgmii_interface.cmo  rgmii_interface.cmt  rgmii_interface__Rgmii_interfaces.cmt
rgmii/src/rtl/eth_mac/_build/default/lib/.rgmii_interface.objs/native/: rgmii_interface.cmx
rgmii/src/rtl/eth_mac/lib/: dune  rgmii_interfaces.ml  rgmii_phy.ml  rx_deserializer.ml  rx_frame_parser.ml  rx_frame_parser2.ml  rx_sink.ml  tx_source.ml
rgmii/test/: dune
scripts/: BUILD  bootstrap.sh  with-switch.sh
test/: BUILD
test/common/: clk_div_tb.ml  dune  helper_tb_functions.ml  second_pulse_tb.ml
test/ipv4/: dune  ipv4_rx_tb.ml  ipv4_tx_tb.ml
test/mii/: BUILD  crc_tb.ml  dune  rx_byte_assembler_tb.ml  rx_controller_tb.ml  rx_datapath_tb.ml  rx_mac_top_tb.ml  rx_path_tb.ml  tx_byte_disassembler_tb.ml  tx_crc_tb.ml  tx_mac_top_tb.ml  tx_path_tb.ml
test/uart/: BUILD  dune  tx_uart_top_tb.ml  uart_tx_tb.ml
test/udp/: dune  udp_duplex_tb.ml  udp_ipv4_rx_tb.ml  udp_loopback_tb.ml  udp_mac_rx_tb.ml  udp_mac_top_tb.ml  udp_rx_tb.ml  udp_tx_tb.ml
tools/: BUILD  dune_build.sh  dune_dir.sh  dune_exec.sh  dune_fmt.sh  dune_tb.sh  dune_test.sh  open_wave.sh
validation/: board_scaffolding.ml  dune  generate_validation.ml  mac_top_validation_harness.ml  mac_top_validation_harness_regs.ml  send_test_frames.py  udp_app.py  udp_duplex_validation_harness.ml  udp_loopback_validation_harness.ml  udp_mac_top_validation_harness.ml  udp_rx_mac_top_validation_harness.ml
validation/constraints/: unified_tx_rx.xdc
verilog_artifacts/: baud_gen.sv  eth_test.sv  second_pulse.sv  uart_top.sv
