opam-version: "2.0"
synopsis: "Ethernet MACs in Hardcaml"
maintainer: "Bohdan Purtell"
authors: "Bohdan Purtell"
license: "MIT"

depends: [
  "ocaml" {>= "5.1.0" & < "5.4.0"}
  "dune" {>= "3.17"}
  "hardcaml"
  "ppx_hardcaml"
  "hardcaml_waveterm"
  "alcotest" {with-test}
  "ocamlformat" {with-dev-setup}
]

build: [
  ["dune" "build" "-p" name]
]
