; MAC validation harness — board-level scaffolding kept OUTSIDE lib/.
; Reuses Arty_board_top.I/O (helper_circuits) as its pin contract and drives
; Mac_top (mii_of_hardcaml). generate_validation.exe emits the harness RTL.

(library
 (name mac_validation)
 (wrapped false)
 (libraries core hardcaml helper_circuits mii_of_hardcaml hardcaml_circuits)
 (modules mac_top_validation_harness mac_top_validation_harness_regs)
 (flags (:standard -w -27-57-33-34-35-40-63-47-26))
 (preprocess
  (pps ppx_hardcaml ppx_jane)))

(executables
 (modes byte exe)
 (names generate_validation)
 (libraries core.command core_unix.command_unix core hardcaml jane_rope
   mii_of_hardcaml mac_validation)
 (modules generate_validation)
 (flags (:standard -w -27-57-33-34-35-40-63-47-26))
 (preprocess
  (pps ppx_jane))
 (promote))
