; MAC validation harness — board-level scaffolding kept OUTSIDE lib/.
; Reuses Arty_board_top.I/O (helper_circuits) as its pin contract and drives
; Mac_top (mii_of_hardcaml). generate_validation.exe emits the harness RTL.

; The MAC validation harness library. Its RTL is now emitted by the unified
; generator: `dune exec lib/common/generate.exe -- validation`
; (the former generate_validation.exe was folded into lib/common/generate.ml).
(library
 (name mac_validation)
 (wrapped false)
 (libraries core hardcaml helper_circuits mii_of_hardcaml udp_of_hardcaml hardcaml_circuits)
 (modules board_scaffolding mac_top_validation_harness mac_top_validation_harness_regs
   udp_mac_top_validation_harness)
 (flags (:standard -w -27-57-33-34-35-40-63-47-26))
 (preprocess
  (pps ppx_hardcaml ppx_jane)))
