(executables
 (modes byte exe)
 (names generate)
 (libraries core.command core_unix.command_unix core hardcaml
   mii_of_hardcaml jane_rope)
 (modules generate)

 (flags (:standard -w -27-57-33-34-35-40-63-47-26))

 (preprocess
  (pps ppx_jane))

 (promote)
)

(library
  (name helper_circuits)
  (libraries core hardcaml)
  (modules helper_circuits)
  (flags (:standard -w -27-57-33-34-35-40-63-47-26))

  (preprocess
    (pps ppx_hardcaml ppx_jane)
  )
)
