; (executables
;  (names rx_byte_assembler_tb rx_mac_top_tb rx_controller_tb rx_datapath_tb)
;  (libraries core hardcaml mii_of_hardcaml hardcaml_waveterm)
;  (preprocess
;   (pps ppx_hardcaml ppx_jane))
;  (flags (:standard -w -27-57-33-34-35-40-63-47-26))
;  )

(executable
 (name rx_mac_top_tb)
 (libraries core hardcaml mii_of_hardcaml hardcaml_waveterm helper_tb_functions)
 (preprocess
  (pps ppx_hardcaml ppx_jane))
 (flags (:standard -w -27-57-33-34-35-40-63-47-26))
 )
