(tests
 (names udp_tx_tb udp_mac_top_tb udp_rx_tb udp_ipv4_rx_tb udp_mac_rx_tb udp_duplex_tb
   udp_loopback_tb)
 (libraries
  core
  hardcaml
  udp_of_hardcaml
  ipv4_of_hardcaml
  hardcaml_waveterm
  helper_tb_functions)
 (preprocess
  (pps ppx_hardcaml ppx_jane))
 (flags
  (:standard -w -27-57-33-34-35-40-63-47-26)))
