(library
 (name rgmii_interfaces)
 ; (modules rgmii_interfaces rgmii_phy rgmii_types)
 (modules rgmii_interfaces rgmii_phy rx_sink tx_source)
 (libraries hardcaml)
 (preprocess (pps ppx_hardcaml ppx_jane))
 (flags (:standard -w -27-57-33-34-35-40-63-47-26))
)

(library
 (name eth_mac)
 ; (modules eth_mac mac_core crc32)
 (modules eth_mac)
 (libraries hardcaml rgmii_interfaces)
 (preprocess (pps ppx_hardcaml ppx_jane))
 (flags (:standard -w -27-57-33-34-35-40-63-47))
)
